--- a/CSS/details.css
+++ b/CSS/details.css
@@ -2,6 +2,7 @@
 	margin: 0 auto;
 	padding-bottom: 5rem;
 	background-color: var(--gray-background);
+	overflow: hidden;
 }
 .details-container {
 	display: flex;
