--- a/CSS/ingredients-mobile.css
+++ b/CSS/ingredients-mobile.css
@@ -1,6 +1,7 @@
 @media screen and (max-width: 900px) {
 	#ingredients {
 		display: none;
+        position: relative;
 	}
 	#ingredients-mobile {
 		display: block;
